# VkCSetup

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  dconfig
.cache/clangd/index/: VkCSetup.c.CE73929B337264A3.idx  VkCSetup.h.5E0A5EB27686754C.idx  context.c.CF878D86E1B32244.idx  egl_context.c.7E56E87E54540E03.idx  egl_context.h.5228AEE96B4ECC83.idx  glfw3.h.7D94EB5EE041C856.idx  glx_context.c.BCAAF5AC89DFB708.idx  glx_context.h.79661895636EDD75.idx  init.c.D29C59C6F525558B.idx  input.c.2F03250AD7DAC08C.idx  internal.h.B2447BD38A82B5E8.idx  linux_joystick.c.5A395483233EEBA8.idx  (+18 more)
docs/html/: VkCSetup_8c.html  VkCSetup_8c_source.html  VkCSetup_8h.html  VkCSetup_8h_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  structInstanceBuilder-members.html  structInstanceBuilder.html  structInstanceBuilderReturn-members.html  structInstanceBuilderReturn.html  structPhysicalDeviceBuilder-members.html  structPhysicalDeviceBuilder.html  structPhysicalDeviceBuilderReturn-members.html  structPhysicalDeviceBuilderReturn.html
docs/latex/: VkCSetup_8c.tex  VkCSetup_8h.tex  annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex  structInstanceBuilder.tex  structInstanceBuilderReturn.tex  structPhysicalDeviceBuilder.tex  structPhysicalDeviceBuilderReturn.tex
include/: VkCSetup.h
src/: VkCSetup.c
tests/: test.c
(+24 files in other folders)
